# chess_project

./: CMakeLists.txt
include/: ChessBoard.hpp  ChessGame.hpp  MovementLogic.hpp  Piece.hpp  TextureManager.hpp
src/: ChessBoard.cpp  ChessGame.cpp  MovementLogic.cpp  Piece.cpp  TextureManager.cpp  main.cpp
